@@ -35,6 +35,10 @@
 	cannot properly decode this data when the original image
 	data is not a multiple of 8 bits.</li>
 
+	<li>HTMLDOC now renders STRONG elements in boldface
+	instead of bold-italic to match the W3C
+	recommendations.</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<li>"$HFIMAGEn" didn't work in a header/footer string.</li>
